Prevent horizontal overflow on mobile

--- a/_sass/page_index.scss
+++ b/_sass/page_index.scss
@@ -1,3 +1,9 @@
+.index-container {
+  @media (max-width: 768px) {
+    overflow-x: hidden;
+  }
+}
+
 .index-body {
   padding: 20px;
   border-radius: 10px;
